fix(column preview): overflow fix

--- a/app/styles/components/columns/new-column.less
+++ b/app/styles/components/columns/new-column.less
@@ -70,6 +70,7 @@
         margin-top: 16px;
         display: flex;
         flex-direction: column;
+        overflow-y: hidden;
     }
 
     &__list {
